kb.css
/* ... */
.DSA.DISH .keyfg, .DSA.HOMING .keyfg {
	background: -moz-radial-gradient(circle, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.04) 60%);
	background: -webkit-gradient(radial, center center, 50%, center center, 60%, from(rgba(0,0,0,0.1)), to(rgba(0,0,0,0.04)));
	background: -webkit-radial-gradient(circle, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.04) 60%);
	background: -o-radial-gradient(circle, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.04) 60%);
	background: -ms-radial-gradient(circle, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.04) 60%);
	background: radial-gradient(circle, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0.04) 60%);
	background-repeat: no-repeat;
}

span.PETSCII { 
	font-family: "C64 Pro Mono";
	font-size: 6px !important;
	border: solid 1px;
	letter-spacing: 0px;
	padding: 0;
	margin: 0;
 }

/* Key labels */
.keylabels { display: table; }
.keylabel { display: table-row; position: absolute; left:2px; top:2px; right:2px; bottom:2px; }
.keylabel > div { display: table-cell; }
.keylabel3>div, .keylabel4>div, .keylabel6>div, .keylabel8>div { text-align: right; }
.keylabel7>div, .keylabel8>div { vertical-align: middle; }
.keylabel2>div, .keylabel4>div { vertical-align: bottom; }
.keylabel5, .keylabel6 { top:100%; margin-top:0px; font-size: 10px !important; white-space:nowrap; overflow: hidden;}
.DSA .keylabel5, .DSA .keylabel6, .SA .keylabel5, .SA .keylabel6 { margin-top:-1px; font-size: 9px !important; }
.keylabel1.centerx-true>div, .keylabel2.centerx-true>div, .keylabel5.centerf-true>div, .keylabel7.centerx-true>div { text-align: center; }
.keylabel1.centery-true>div, .keylabel3.centery-true>div { vertical-align: middle; }

/* color swatches */
#swatches {
	list-style-type: none;
	-webkit-margin-before: 0em;
	-webkit-margin-after: 0em;
	-webkit-margin-start: 0px;
	-webkit-margin-end: 0px;
	-webkit-padding-start: 0px;
}
.swatch { 
	display: inline-block; 
	position:relative;
	width: 16px; 
	height: 32px; 
	border:solid 1px #888; 
	margin-right:-1px;
	margin-bottom:-6px;	
	padding:0px;
}
.swatch.picker { 
	height: 26px; 
	border:solid 1px #a9a9a9;
	margin-left:-1px;
}
.swatch.picker:disabled {
	background-color: rgb(235,235,228) !important;
}
#swatches.disabled .swatch {
	background-color: rgb(235,235,228) !important;
}


.swatch .highlight { display:none; }
.swatch.selected-bg .highlight.bg { display:block; z-index:100; width: 6px; height: 6px; border: solid 1px black; background: white; opacity; 0.75; position:absolute; left:7px; top:23px; }
.swatch.selected-fg .highlight.fg { display:block; z-index:100; width: 6px; height: 6px; border: solid 1px white; background: black; opacity; 0.75; position:absolute; left:1px; top:23px; }

/* general styles */
.hidden { display: none; }
.error { border: solid 2px rgb(217,83,79); }
#selectionRectangle { position: absolute; border: dashed 2px red; }
#rotationCrosshairs { 	
	display: none;
	position: absolute;
	margin: 0px;
	padding: 0px;
	font-size: 25px;
	line-height: 23px;
	width: 25px;
	height: 25px;
	color: black;
	text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
}

#rawdata, #rawdata-error, #noteseditor { font-family: "Consolas", "Courier New", "Courier", monospace; }
#rawdata { width: 100%; }
#rawdata-error { white-space: pre; }

#tab-content {
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    padding-top: 15px;
    padding-bottom: 15px;
    margin-left: 0px;
}
#properties.row { padding-left:30px; }

/*Help Dialog*/
.modal-xl .modal-dialog { width:80vw; }
.modal-xxl .modal-dialog { width:90vw; }

/* Tooltip modifications */
.hint--rounded:after { width: 300px; }
.hint:after, [data-hint]:after { white-space: pre-line; }
.hint:before, .hint:after, [data-hint]:before, [data-hint]:after { -webkit-transition: 0.1s ease; -moz-transition: 0.1s ease; transition: 0.1s ease; }

#swap-colors { position: absolute; top: 11px; left: 200px; z-index: 1; }
.color-name { display: inline-block; min-width: 3em; font-size: 10px; white-space: nowrap; }

/* Our "README" dialog; we want the body of the dialog itself to be scrollable */
.markdownDialog .modal-dialog { margin: 30 auto; } /*60px*/
.markdownDialog .modal-header { height: 55px; }
.markdownDialog .modal-footer { height: 74px; margin-top: 0px; }
.markdownDialog .modal-body {
	padding-bottom: 15px;
	height: calc(100vh - 205px) !important;
	overflow-y: auto !important;
}

.drag-over { border: dotted 3px red !important; box-sizing: border-box; }

/* Only show the keyboard layout itself when printing */
@media print {
  html, body { overflow:hidden; height:100%; margin: 0 !important; padding: 0 !important; }
  #wrap > .navbar, #wrap > .body > .btn-group, #keyboard ~ *, #keyboard + *, #footer, #helpDialog, #markdownDialog { display: none; margin: 0 !important; padding: 0 !important; }
  div.body { margin: 0 !important; padding: 0 !important; }
  #keyboard { 
  	border: none; 
  	background-color: inherit !important; 
  	transform:scale(0.75,0.75); 
  	-moz-transform:scale(0,75,0.75); 
  	-ms-transform:scale(0,75,0.75); 
  	-webkit-transform:scale(0.75,0.75); 
  	position: absolute !important;
  	left: 0px; 
  	top: 0px;
  	padding-left: 0px; padding-top: 0px;
  }
}

/* the default (-15px) causes overflow problems */
.navbar-right { margin-right: 0; }

/* densely pack the form */
.form-horizontal .form-inline, .form-horizontal > .form-group.form-group-sm > .form-outdent { margin-left: -15px; }
.form-horizontal .form-inline .form-group { margin-left: 0; margin-right: 0; }
.form-group { margin-bottom: 2px; }
.form-control.input-sm, .input-group-sm > .form-control { height: 26px; padding: 2px; }
.input-group-sm > .input-group-btn > .btn { height: 26px; padding: 2px; min-width: 16px; }
.input-group-sm > .input-group-addon { height: 26px; padding: 2px; min-width: 16px; }
.form-horizontal .form-group-sm .checkbox { padding-top: 3px; min-height:26px; }

